--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.8"
+bevy = "0.8.1"
+bevy_rapier2d = "0.16.2"
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
